[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/gameplay/ui/traveller_list/traveller_list.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/gameplay/game_objects/map_node/assets/map_node_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://screens/gameplay/game_objects/ship_controller/ship.gd" type="Script" id=3]
[ext_resource path="res://screens/gameplay/ui/action_prompt/action_prompt.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[node name="Ship" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 16, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TravellerList" parent="." instance=ExtResource( 1 )]
margin_left = -76.0
margin_top = -46.0
margin_right = 232.0
margin_bottom = 4.0
rect_min_size = Vector2( 80, 50 )
alignment = 1

[node name="ActionPrompt" parent="." instance=ExtResource( 4 )]
anchor_left = 8.0
anchor_top = 8.0
anchor_right = 8.0
anchor_bottom = 8.0
margin_left = 7.0
margin_top = 6.0
margin_right = 211.0
margin_bottom = 64.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="RouteLine" type="Line2D" parent="."]
points = PoolVector2Array( -3, 8, 1, 8 )
width = 1.5
default_color = Color( 0, 0, 0, 0 )
